--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 header {
-    background-color: #0b6e36;
+    background-color: rgb(11, 110, 54);
     color: white;
     padding: 16px 32px;
    
@@ -48,7 +48,7 @@ body {
 
 .about-section h1 {
   font-size: 36px;
-  color: #2e7d32;
+  color: rgb(11, 110, 54);
   margin-bottom: 20px;
 }
 
@@ -141,3 +141,77 @@ body {
     color: black;
 
  }
+ /*events */
+ .events-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    gap: 1.5rem;
+}
+
+.event-card {
+    background-color: white;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+    transition: transform 0.2s;
+}
+
+.event-card:hover {
+    transform: translateY(-5px);
+}
+
+.event-card img {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+}
+
+.event-card-content {
+    padding: 1.5rem;
+}
+ #create-event {
+    
+    
+    background-color: white;
+    padding: 32px;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+.headingcreate{
+    text-align: center;
+    color:#2e7d32
+}
+#event-form label {
+    display: block;
+    margin-top: 16px;
+    font-weight: bold;
+}
+
+#event-form input, #event-form textarea {
+    width: 50%;
+    padding: 8px;
+    margin-top: 8px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+#event-form button {
+    display: block;
+    width: 100%;
+    padding: 16px;
+    margin-top: 24px;
+    background-color: rgb(11, 110, 54);
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+#backform{
+    background-color: rgb(244, 231, 214);
+    text-align: center;
+    padding:20px;
+    margin:20px auto;
+    max-width:600px;
+    border-radius:10px;
+    
+}
